--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,8 @@
 :root {
   --black: #121214;
   --white: #e5e5e5;
+  
+  --black-alpha: #00000044;
 
   --font-black: #121214;
   --font-white: #e5e5e5;
@@ -11,10 +13,26 @@
   font-size: 62.5%;
 }
 
+/* html, body {
+  width: 100vw;
+} */
+
 body {
+  font-size: 1.6rem;
   font-family: var(--font-times);
+  line-height: 1.5;
+  /* background: var(--white); */
+  background: url(../assets/img/under-bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 a:hover, button:hover {
   cursor: pointer;
+}
+
+.container {
+  padding-right: 6%;
+  padding-left: 6%;
 }
